# cm-client

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigureChecks.cmake  Jenkinsfile  README.md  pull_request_template.md
ConfigShared/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigWatchdog.cpp  ConfigWatchdog.hpp  IConfigLogger.hpp  config_shared.hpp
ConfigShared/config/: bs.json  cm_config.json
Gpg/: CMakeLists.txt
Gpg/src/: CMakeLists.txt  GpgContext.cpp  GpgError.cpp  GpgKeyId.cpp  GpgKeychain.cpp  GpgUtil.cpp  TemporaryDirectory.cpp
Installer/: build_cm_installer.sh  build_sample_installer.sh  cm_distribution.xml  cm_uninstall.sh  com.cisco.secureclient.cloudmanagement.plist  notarize_pkg.sh  sample_distribution.xml
OSPackageManager/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  main.cpp
OSPackageManager/Mocks/MockCMIDAPIProxyAbstract/: MockCMIDAPIProxyAbstract.hpp
OSPackageManager/Mocks/MockCommandExec/: MockCommandExec.hpp
OSPackageManager/Mocks/MockFileUtilities/: MockFileUtilities.hpp
OSPackageManager/Mocks/MockPackageManager/: MockPackageManager.hpp
OSPackageManager/Mocks/MockPmCertManager/: MockPmCertManager.h  MockPmCertRetriever.cpp  MockPmCertRetriever.h
OSPackageManager/Mocks/MockPmPlatformComponentManager/: MockCodesignVerifier.hpp  MockPmPkgUtil.hpp  MockPmPlatformComponentManager.hpp  MockPmPlatformConfiguration.hpp
OSPackageManager/Mocks/MockPmPlatformDependencies/: MockPmPlatformDependencies.hpp
OSPackageManager/Mocks/MockPmPlatformDiscovery/: MockPmPlatformDiscovery.hpp
OSPackageManager/agent/: PackageManagerAgent.cpp  PackageManagerAgent.hpp
OSPackageManager/common/: CommandExec.cpp  CommandExec.hpp  ICommandExec.hpp  IFileUtilities.hpp  IPmCertRetriever.hpp  IPmPlatformDiscovery.hpp  PmCertManager.cpp  PmCertManager.hpp  PmLogger.cpp  PmLogger.hpp
OSPackageManager/configuration/: Config.cpp  Config.hpp  ConfigWatchdog.hpp
OSPackageManager/controlplugin/: CMakeLists.txt  ExecutionError.cpp  ExecutionError.hpp  IProcessWrapper.hpp  ModuleControlPlugin.cpp  ModuleControlPlugin.hpp  PmAgentController.cpp  PmAgentController.hpp  PmStatusTypes.hpp  ProcessWrapper.cpp  ProcessWrapper.hpp  ProcessWrapperLinux.cpp
OSPackageManager/environment/: MockEnvironment.cpp  MockEnvironment.h  UnitTestBase.cpp  UnitTestBase.h
OSPackageManager/linux/: FileUtilities.cpp  FileUtilities.hpp  IPackageUtil.hpp  IPmCertRetriever.hpp  LinuxCommandExec.cpp  LinuxCommandExec.hpp  PackageUtilDEB.cpp  PackageUtilDEB.hpp  PackageUtilRPM.cpp  PackageUtilRPM.hpp  PmCertRetrieverImpl.cpp  PmCertRetrieverImpl.hpp  PmPlatformComponentManager.cpp  PmPlatformComponentManager.hpp  PmPlatformConfiguration.cpp  PmPlatformConfiguration.hpp  PmPlatformDependencies.cpp  PmPlatformDependencies.hpp  PmPlatformDiscovery.cpp  PmPlatformDiscovery.hpp
OSPackageManager/macOS/: FileUtilities.cpp  FileUtilities.hpp  FileUtilities.mm  IFileUtilities.hpp  IPmCertRetriever.hpp  IPmCodesignVerifier.hpp  IPmPkgUtil.hpp  IPmPlatformDiscovery.hpp  PmCertManager.cpp  PmCertManager.hpp  PmCertRetrieverImpl.cpp  PmCertRetrieverImpl.hpp  PmCodesignVerifier.hpp  PmCodesignVerifierMac.cpp  PmLogger.cpp  PmLogger.hpp  PmPkgUtilWrapper.cpp  PmPkgUtilWrapper.hpp  PmPlatformComponentManager.cpp  PmPlatformComponentManager.hpp  PmPlatformConfiguration.cpp  PmPlatformConfiguration.hpp  PmPlatformDependencies.cpp  PmPlatformDependencies.hpp  PmPlatformDiscovery.cpp  PmPlatformDiscovery.hpp
OSPackageManager/macOS/util/: codesign_bin.cpp  codesign_bin.h  codesign_pkg.mm  pkg_util.h  pkg_util.mm
OSPackageManager/proxy/: CMIDAPIProxy.hpp  CMIDAPIProxyAbstract.hpp  IProxyDiscoveryEngine.h  ProxyDiscoveryEngine.h  ProxyDiscoveryEngine.mm
OSPackageManager/tests/: CMakeLists.txt
OSPackageManager/tests/cmpackagemanager/: CMPackageManagerUnitTest.cpp  CMakeLists.txt  MockCMIDAPIProxy.hpp  TestCodesignVerifierMac.cpp  TestConfiguration.cpp  TestConfigurationReload.cpp  TestFileWatcher.cpp  TestPmCertMgr.cpp  TestPmFileUtilities.cpp  TestPmFileUtilitiesIntegration.cpp  TestPmFileUtilitiesIntegration.mm  TestPmLogger.cpp  TestPmPkgUtilWrapper.cpp  TestPmPlatformComponentManager.cpp  TestPmPlatformConfiguration.cpp
OSPackageManager/tests/cmpackagemanager/Resources/mac/root/child1/: signedprocess
OSPackageManager/tests/config/: CMakeLists.txt  ConfigTest.cpp
OSPackageManager/tests/controlplugin/: CMakeLists.txt  FakeProcessWrapper.cpp  FakeProcessWrapper.hpp  ModuleControlPluginTest.cpp  PmAgentControllerTest.cpp
OSPackageManager/tests/controlplugin/Resources/mac/: README.md  cmpackagemanager
OSPackageManager/tests/controlplugin/testexecutable/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  build.sh  main.cpp
OSPackageManager/tests/linux/: CMakeLists.txt  TestPackageUtilRPM.cpp
ProxyDiscovery/: CMakeLists.txt
ProxyDiscovery/include/: IProxyDiscoveryEngine.h  IProxyLogger.h  ProxyDef.h  ProxyRecord.h
ProxyDiscovery/src/: ProxyDiscoveryEngine.h  ProxyDiscoveryEngine.mm  ProxyLogger.cpp  ProxyLoggerDef.hpp  ScopedGuard.hpp
Uninstaller/: CMakeLists.txt  cm_uninstall.applescript  cm_uninstall.icns
bitsandpieces/: CMakeLists.txt  ConfigWatchdog.cpp  ConfigWatchdog.hpp  bitsandpieces.hpp
client/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  main.cpp
client/ComponentLoader/: CMIDLoader.cpp  CMIDLoader.hpp  PMLoader.cpp  PMLoader.hpp
client/Configuration/: Config.cpp  Config.hpp  ConfigWatchdog.hpp
client/Logger/: CMLogFile.cpp  CMLogFile.hpp  CMLogger.cpp  CMLogger.hpp  DefaultCMLogger.cpp  ICMLogFile.hpp  ICMLogger.hpp
client/config/: bs.json  bs_dev.json  cm_config.json
client/crashpad/: CrashpadTuner.cpp  CrashpadTuner.h
client/tests/: CMakeLists.txt
client/tests/Config/: CMakeLists.txt  ConfigTest.cpp  example_test.cpp
client/tests/Logger/: CMLoggerTest.cpp  CMakeLists.txt
diagnostics/: BaseConfig.xml  CloudManagement.xml
doc/: cm-client_on_mac_linux.md  cm-client_proposal_for_linux.md  (+2 more)
util/: CMakeLists.txt  GuidUtil.hpp  PathUtil.hpp  StringUtil.hpp  ThreadTimer.hpp  util.hpp
util/linux/: GuidUtil.cpp  PathUtil.cpp
util/macOS/: GuidUtil.mm  PathUtil.mm  StringUtil.mm
(+64 files in other folders)
